fixed overflow in videos container

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -22,16 +22,22 @@ body {
 
 .header-links-container {
     grid-area: navlinks;
+    position: fixed;
+    top: 7%;
+    right: -1.5%;
+    height: 5%;
+    background: white;
 }
+
 
 .pages-header {
     grid-area: header;
-}
-
-
-
-.pages-header {
     display: flex;
+    background-color: white;
+    position: fixed;
+    top: 0%;
+    width: 100%;
+    height: 7%;
     justify-content: space-between;
     align-items: flex-start;
     padding: 10px 20px;
@@ -172,6 +178,7 @@ body {
     height: 300px;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
     gap: 10px;
 }
 
@@ -188,7 +195,8 @@ body {
 
 .video-details-container {
     display: flex;
-    height: 25%;
+    min-height: 25%;
+    max-height: fit-content;
     flex-direction: row;
 }
 
@@ -199,6 +207,8 @@ body {
 .post-details-container {
     width: 85%;
     display: flex;
+    justify-content: space-between;
+    max-height: fit-content;
     flex-direction: column;
     gap: 5px;
 }
@@ -240,9 +250,16 @@ body {
 
 .page-side-bar {    
     grid-area: sidebar;
-    height: 100%;
+    height: 100vh;
+    overflow: auto;
+    position: fixed;
+    width: 13%;
+    top: 6.9%;
 }
 
+.page-side-bar::-webkit-scrollbar{
+    display: none;
+}
 
 hr {
     border: 1px solid rgb(249, 246, 246);
